--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="container">
     <header>
-        <p>풀로우~</p>
+        <a href="./list.html">풀로우~</a>
     </header>
     <main>
         <div id="map"></div>
