--- a/public/data/list.html
+++ b/public/data/list.html
@@ -13,7 +13,7 @@
             height: 100vh;
         }
     </style>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -29,7 +29,7 @@
 
 <script>
     document.addEventListener("DOMContentLoaded", () => {
-        fetch("/data/swimmingPools.json") // JSON 데이터 불러오기
+        fetch("data/pools.json") // JSON 데이터 불러오기
             .then(response => response.json())
             .then(data => {
                 const listContainer = document.getElementById("list-container");
