--- a/public/list.html
+++ b/public/list.html
@@ -23,7 +23,7 @@
         <p>리스트 페이지~</p>
     </header>
     <main>
-        <div class="list-container"></div>   
+        <div id="list-container"></div>   
     </main>
 </div><!--container-->
 
