--- a/public/list.html
+++ b/public/list.html
@@ -13,7 +13,7 @@
             height: 100vh;
         }
     </style>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -28,7 +28,7 @@
     </main>
 </div><!--container-->
 
-<script src="/js/list.js"></script>
+<script src="js/list.js"></script>
 
 </body>
 </html>
