--- a/public/list.html
+++ b/public/list.html
@@ -21,7 +21,7 @@
     <div class="container">
     <header>
         <div class="search-console">
-            <i class="fa-solid fa-arrow-left"></i>
+            <a href="/public/index.html"> <i class="fa-solid fa-arrow-left"></i></a>
             <div class="search">
                 <input type="text" id="searchInput" placeholder="어디서 수영할까요? 50m, 송파구 등으로 검색!" onkeyup="searchPools()">
             </div>
