이미지 경로

--- a/public/login.html
+++ b/public/login.html
@@ -39,7 +39,7 @@
 
             <div class="loginBoxGroup">
                 <div id="naverIdLogin" class="socialLogin">
-                    <div class="loginLogo">  <img src="/public/images/naver.png"></div>
+                    <div class="loginLogo">  <img src="/images/naver.png"></div>
                     <div> 네이버 계정으로 계속</div>
                     <div> > </div>
                 </div>
