이미지 경로 수정

--- a/public/login.html
+++ b/public/login.html
@@ -39,13 +39,13 @@
 
             <div class="loginBoxGroup">
                 <div id="naverIdLogin" class="socialLogin">
-                    <div class="loginLogo">  <img src="/images/naver.png"></div>
+                    <div class="loginLogo">  <img src="images/naver.png"></div>
                     <div> 네이버 계정으로 계속</div>
                     <div> > </div>
                 </div>
                 
                 <div id="googleLogin" class="socialLogin">
-                    <div class="loginLogo"> <img src="/public/images/google.png"></div>
+                    <div class="loginLogo"> <img src="images/google.png"></div>
                     <div>구글 계정으로 계속</div>
                     <div> > </div>
                 </div>
