로그인/비로그인 상태를 체크해서 (global js initHeaderUI) index와 detail 화면 상단의 my버튼 스타일 제어

--- a/public/detail.html
+++ b/public/detail.html
@@ -22,7 +22,10 @@
                     <div class="pool-name"></div>
                     <div id="heartBtn" style="visibility: hidden;">🩶</div>
                 </div>
-                    <a id="mypage" href="mypage.html"> my </a>
+                    <div class="mypage-wrapper">
+                        <span class="whale-bg">🐋</span>
+                        <a id="mypage" href="mypage.html"> my </a>
+                    </div>
             </div>
         </header>
         <main>
