--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,10 @@
         <header>
             <div class="header flex-between">
                 <a id="home" href="index.html"> 🌊 poolow </a>
-                <a id="mypage" href="mypage.html"> my </a>
+                <div class="mypage-wrapper">
+                    <span class="whale-bg">🐋</span>
+                    <a id="mypage" href="mypage.html"> my </a>
+                </div>
             </div>
         </header>
         
