프로필 수정 영역 신설, provider 배열로 저장, 변경한 이름을 firestore에서 customname 필드로 저장

--- a/public/mypage.html
+++ b/public/mypage.html
@@ -22,9 +22,9 @@
         <header>
             <div class="header flex-between">
                 <a id="home" href="index.html"> 🌊 poolow </a>
-                <div id="logoutBtn" class="flex-align-center flex">
+                <!-- <div id="logoutBtn" class="flex-align-center flex">
                     <img src="icons/settings.svg" alt="Settings Icon" width="20" height="20">
-                </div>
+                </div> -->
             </div>
         </header>
         <main>  
@@ -38,7 +38,7 @@
             <div id="userInfo" style="display: none;">
                 <div class="flex-between">
                     <div id="userName"> </div>
-                    <div class="border-link">프로필 수정</div>               
+                    <a class="border-link" href="profile.html">프로필 수정</a>               
                 </div>
                 <!-- <div class="flex">
                     <div id="favoriteCount"> 즐겨찾는 수영장 : 개</div>
