phone from 브랜치에 커밋

--- a/public/mypage.html
+++ b/public/mypage.html
@@ -29,13 +29,8 @@
         </header>
         <main>  
 
-            <div id="phoneForm" style="display: none;">
-                <p>📱 전화번호를 입력해주세요</p>
-                <input type="text" id="phoneInput" placeholder="010-0000-0000" />
-                <button id="savePhoneBtn">저장</button>
-            </div>
             
-            <div id="userInfo" style="display: none;">
+            <div id="userInfo">
                 <div class="flex-between">
                     <div id="userName"> </div>
                     <a class="border-link" href="profile.html">프로필 수정</a>               
