--- a/public/index.html
+++ b/public/index.html
@@ -8,17 +8,17 @@
     <script type="text/javascript" 
         src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=2c569m0l5t">
     </script>
-
-    
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/detail.css">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+
+    <!-- ICO 형식 -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <!-- PNG 형식 (대체용) -->
+    <link rel="icon" href="images/favicon.png" type="image/png">
+
 
 </head>
 <body>
