--- a/public/mypage.html
+++ b/public/mypage.html
@@ -6,7 +6,10 @@
 
     <title>poolow</title>
     
-
+    <!-- ICO 형식 -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <!-- PNG 형식 (대체용) -->
+    <link rel="icon" href="images/favicon.png" type="image/png">
     
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/style.css">
