--- a/public/profile.html
+++ b/public/profile.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no,viewport-fit=cover">
 
     <title>풀로우- 내 프로필</title>
+    
+    <!-- ICO 형식 -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <!-- PNG 형식 (대체용) -->
+    <link rel="icon" href="images/favicon.png" type="image/png">
         
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/detail.css">
