--- a/public/detail.html
+++ b/public/detail.html
@@ -7,6 +7,10 @@
     <script type="text/javascript" 
         src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=2c569m0l5t">
     </script>
+    <!-- ICO 형식 -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <!-- PNG 형식 (대체용) -->
+    <link rel="icon" href="images/favicon.png" type="image/png">
     <link rel="stylesheet" href="css/detail.css">
     <link rel="stylesheet" href="css/addFavRev.css">
     <link rel="stylesheet" href="css/style.css">
