--- a/public/phoneForm.html
+++ b/public/phoneForm.html
@@ -6,6 +6,9 @@
 
     <title> poolow</title>
     
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.png" type="image/png">
+
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/phoneForm.css">
     <link rel="stylesheet" href="css/detail.css">
