로그인 보안규칙 적용, 네이버 커스텀 토큰 생성하여 파이어베이스에서 인증

--- a/public/naver-callback.html
+++ b/public/naver-callback.html
@@ -7,16 +7,12 @@
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="images/favicon.png" type="image/png">
   
+  <script type="module" src="https://www.gstatic.com/firebasejs/11.5.0/firebase-functions.js"></script>
   <script src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.2.js"></script>
+  <script type="module" src="js/naver-callback-handler.js"></script>
 </head>
 
 <body>
-
-  
-  <p>네이버로 로그인중 ⏱️ </p>
-
-  
+  <p> 네이버로 로그인중 ⏱️ </p>
 </body>
-
-<script type="module" src="js/naver-callback-handler.js"></script>
 </html>
