메타 타이틀 일부, 메타 디스크립션, 콘솔로그 주석처리

--- a/public/detail.html
+++ b/public/detail.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>poolow</title>
+    <title></title>
+    <meta name="description" content="풀로우">
+
 
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="images/favicon.png" type="image/png">
