--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no,viewport-fit=cover">
 
-    <title>poolow</title>
-    
+    <title>poolow - 자유수영 수영장 검색 플랫폼, 풀로우</title>
+    <meta name="description" content="지도 위에서 수영장을 검색하고 자유수영 운영 현황과 후기를 확인하세요.">
+
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="images/favicon.png" type="image/png">
     
