인덱스 수정 전 커밋

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,12 @@
                             <i class="fa-solid fa-xmark" id="clearSearch"></i>
                         </div>
                     </div>
+                    <div class="filter-container">
+                        <button class="filter-btn" data-filter="weekday">평일만</button>
+                        <button class="filter-btn" data-filter="weekend">주말만</button>
+                        <button class="filter-btn" data-filter="today">오늘만</button>
+                        <button class="filter-btn" data-filter="50m">50m만</button>
+                    </div>
                 </div>
                 <div id="myLocation" class="location-btn">
                     <svg class="crosshair" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
