--- a/public/admin/list.html
+++ b/public/admin/list.html
@@ -9,10 +9,10 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="images/favicon.png" type="image/png">
     
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/admin.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./admin.css">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
-    <script type="module" src="./js/config.js"></script>
+    <script type="module" src="../js/config.js"></script>
     <script type="module" src="./list.js"></script>
 </head>
 <body>
